// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with 0 expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    0
     expense(s) totalling 
    $0.00
  </p>
</div>
`;

exports[`Should render ExpensesSummary with 1 expense correctly 1`] = `
<div>
  <p>
    Viewing 
    1
     expense(s) totalling 
    $1.95
  </p>
</div>
`;

exports[`Should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    3
     expense(s) totalling 
    $1,141.95
  </p>
</div>
`;
